# tapl

./: LICENSE  Stlc.hs  Untyped.hs  llvm.hs  main.hs  parse.hs  parse2.hs  tapl.cabal  tmp.hs  unify.hs
Stlc/: Interpret.hs  parse.hs
Untyped/: Interpret.hs  parse2.hs
