name:                tapl
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable tapl
  main-is: main.hs
  -- other-modules:
  build-depends: base == 4.6.*,
                 attoparsec == 0.10.*,
                 safe == 0.3.*,
                 text >= 0.11,
                 text-format >= 0.3,
                 time >= 1.4,
                 parsec >= 3.1,
                 netwire == 4.0.*,
                 mtl == 2.1.*

executable unify
  main-is: unify.hs
  build-depends: base == 4.6.*,
                 safe == 0.3.*,
                 mtl == 2.1.*

-- executable llvm
--   main-is: llvm.hs
--   build-depends: llvm >= 3
